--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs6FNGz_3YuWio2VeaRmFTJhvxEuEzJJY">
+  </script>
+
 </head>
 
 <body>
